samples/_failures_safe/1761279048_01a100_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51d536b2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_51d536b2.c:165:17: error: expected declaration or statement at end of input
  165 |                 token.type = TOKEN_UNKNOWN;
      |                 ^~~~~
./samples/SAFE/__tmp_51d536b2.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51d536b2.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51d536b2.c:165:17: error: expected declaration or statement at end of input
